--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
         <div id="canvasContainer"></div>
 
-	<script src= "Assets\JavaScriptFiles/canvas.js"></script>
+	<script type="module" src= "Assets\JavaScriptFiles/index.js"></script>
   </body>
 </html>
