--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
         <div id="canvasContainer"></div>
 
-	<script type="text/babel" src= "Assets\JavaScriptFiles/index.js"></script>
+	<script type="module" src= "Assets\JavaScriptFiles/index.js"></script>
   </body>
 </html>
